# semiautomatic_termino

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STATUS.md  TESTING.md  config.example.json  config.ps1  config.py  dev.ps1  git_setup.ps1  main.py  pyproject.toml  repair.ps1  requirements.txt  setup.py  setup_ews.ps1  status.py  test_send_ews.py  test_unicloud.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  deployment_issue.md  feature_request.md
.github/workflows/: tests.yml
deploy/: README.md
deploy/lxc/: 90-tun-lxc.rules  ct.conf.snippet
deploy/openconnect-sso/: config.toml.example
deploy/scripts/: termino_watchdog.sh  vpn_down.sh  vpn_up.sh  watchdog.sh
deploy/sudoers.d/: openconnect-termino
deploy/systemd/: termino-watchdog.service  termino-watchdog.timer  termino.service  termino.timer
docs/: SERVER_VPN_SETUP.md  UNIGRAZ_OPENCONNECT_ROADMAP.md  conf.py  index.md  troubleshooting.md
docs/architecture/: overview.md
docs/deployment/: server-cron.md  vpn-setup.md
docs/getting-started/: configuration.md  installation.md  secrets.md
docs/reference/api/: index.md
docs/superpowers/plans/: 2026-06-03-readthedocs-sphinx-docs.md
docs/superpowers/specs/: 2026-06-03-readthedocs-sphinx-docs-design.md
docs/usage/: daily-run.md
templates/: first_email.example.txt  reminder.example.txt  versuchsleiter.example.xlsx
tests/: test_auto_vpn.py  test_auto_vpn_win.py  test_calendar_sinks.py  test_data_prep.py  test_data_prep_strict_string.py  test_defensive_fixes.py  test_mail_senders.py  test_mailing.py  test_main_calendar_hook.py  test_make_docs_screenshots.py  test_run_report.py  test_xlsx_pipeline_fixes.py
tools/: create_unicloud_template.py  debug_termino_dom.py  make_docs_screenshots.py  migrate_env_to_keyring.py  run-termino.cmd  server_setup.sh  setup-windows-tasks.ps1  sort_termino.py  teardown-windows-tasks.ps1  update_unicloud_template.py  vpn-down.cmd  vpn-up.cmd
utils/: auto_vpn.py  auto_vpn.py.bak2  auto_vpn_win.py  calendar_sinks.py  extensions.py  mail_senders.py  mailing.py  preperation.py  run_report.py  secrets.py  sheet_providers.py  styles.py  unicloud.py  vpn.py  vpn_provider.py  web_interaction.py
