# ===========================================================================
# pyproject.toml - termino-skript
# ===========================================================================
# Cross-OS dependency declaration. Use uv for reproducible installs:
#
#   curl -LsSf https://astral.sh/uv/install.sh | sh        (Linux/macOS)
#   powershell -c "irm https://astral.sh/uv/install.ps1 | iex"  (Windows)
#
# Then in the project root:
#
#   uv sync             # creates .venv/ and installs everything pinned in uv.lock
#   uv run python main.py
#   uv run pytest       # or: uv run python -m unittest discover -s tests
#
# To upgrade a dep:
#
#   uv lock --upgrade-package pandas
#
# To add a new dep:
#
#   uv add some-package
# ===========================================================================

[project]
name = "termino-skript"
version = "2.0.0"
description = "Daily-cron automation around termino.gv.at: pulls VL assignments from a uniCLOUD xlsx, syncs Termino, sends confirmation/reminder mails via EWS or Yahoo, drops calendar events. Designed for university research groups managing many participants."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
    { name = "saiko-psych" },
]
keywords = [
    "termino", "research", "psychology", "automation",
    "calendar", "ews", "caldav", "scheduling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
]

# ---------------------------------------------------------------------------
# Runtime dependencies (everything main.py needs to run a daily cron)
# ---------------------------------------------------------------------------
dependencies = [
    # Web / HTTP
    "requests>=2.32",
    "beautifulsoup4>=4.13",

    # Data
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-dateutil>=2.9",

    # Browser automation (Termino has no API)
    "selenium>=4.30",
    "webdriver-manager>=4.0",

    # Mail backends
    "exchangelib>=5.6",     # Uni-Graz EWS (Outlook)

    # Calendar backends
    "caldav>=3.0",          # Nextcloud (cloud.uni-graz.at)
    "icalendar>=5.0",       # iMIP invites attached to VL mails

    # Credentials
    "keyring>=25.0",                                # OS keyring (Win Credential Manager, macOS Keychain)
    "keyrings.alt>=5.0 ; sys_platform != 'win32' and sys_platform != 'darwin'",       # headless: provides PlaintextKeyring
    "keyrings.cryptfile>=1.3 ; sys_platform != 'win32' and sys_platform != 'darwin'",
    "pycryptodome>=3.20 ; sys_platform != 'win32' and sys_platform != 'darwin'",

    # Legacy env file support (will be removed in a future version)
    "python-dotenv>=1.0",

    # Windows-only: keyring uses win32com to talk to Credential Manager
    "pywin32>=305 ; sys_platform == 'win32'",
]

# ---------------------------------------------------------------------------
# Optional / dev dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    # Tests are stdlib-only, but ship a runner that is nicer in CI
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
docs = [
    "sphinx>=8.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=2.0",
]
screenshots = [
    "playwright>=1.48",
]
# NOTE: openconnect-sso is NOT bundled as an optional dependency here
# because its pinned `keyring<24` conflicts with our `keyring>=25`. On
# Linux servers that need utils/auto_vpn.py, install openconnect-sso as
# an isolated uv tool instead:
#     uv tool install --with 'setuptools<70' --with 'keyrings.alt' --with 'pycryptodome' openconnect-sso
# See docs/SERVER_VPN_SETUP.md for full setup.


[project.urls]
Homepage = "https://github.com/saiko-psych/semiautomatic_termino"
Repository = "https://github.com/saiko-psych/semiautomatic_termino"
Issues = "https://github.com/saiko-psych/semiautomatic_termino/issues"

# ---------------------------------------------------------------------------
# Build system - we don't ship a wheel, this is an application, not a library
# but the build-system block is required by PEP 621.
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.hatch.build.targets.sdist]
include = [
    "main.py",
    "status.py",
    "setup.py",
    "utils/**",
    "templates/*.example.txt",
    "tools/**",
    "tests/**",
    "config.example.json",
    "README.md",
    "LICENSE",
    "CLAUDE.md",
    "SECURITY.md",
    "CONTRIBUTING.md",
]

# ---------------------------------------------------------------------------
# uv-specific configuration
# ---------------------------------------------------------------------------
[tool.uv]
# Lock for these Python versions so the lockfile works on Win + Linux + macOS.
required-version = ">=0.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
